src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Physician&apos;s Age</description>
        <inlineHelpText>Physician&apos;s Age</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ancillary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Networks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Networks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Rolodex_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rolodex To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rolodex</relationshipLabel>
        <relationshipName>Rolodex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedFromMarketingCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When an account is created from or for Marketing Cloud, this checkbox will be checked.</description>
        <label>Created From Marketing Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CredComments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cred_Cycle__c</fullName>
        <label>Cred Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cred_Status_Date__c</fullName>
        <description>Cred Status Date</description>
        <label>Cred Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cred_Status_Time_Stamp__c</fullName>
        <description>Used to capture the Cred Status Time Stamp as per the PPN-42184</description>
        <label>Cred Status Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cred_Status__c</fullName>
        <description>This field created part of PPN-25402. This field will hold the group credentialing case status</description>
        <label>Cred Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>PPN-18880: Date of Birth Field on Account</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>501(C)(3) NON-PROFIT</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization</fullName>
                </value>
                <value>
                    <fullName>Adult Day Care Medicaid</fullName>
                </value>
                <value>
                    <fullName>After Hours Care</fullName>
                </value>
                <value>
                    <fullName>Air Ambulance</fullName>
                </value>
                <value>
                    <fullName>Autism Evaluation Provider</fullName>
                </value>
                <value>
                    <fullName>Baylor Hold</fullName>
                </value>
                <value>
                    <fullName>BD - 1042 - Total Care-Broad</fullName>
                </value>
                <value>
                    <fullName>BD - 1043 - Total Care-Target</fullName>
                </value>
                <value>
                    <fullName>BD - Acute Leukemia</fullName>
                </value>
                <value>
                    <fullName>BD - Alternate Transplant - Bone Marrow</fullName>
                </value>
                <value>
                    <fullName>BD - Alternate Transplant - Combination Heart-Lung</fullName>
                </value>
                <value>
                    <fullName>BD - Alternate Transplant - Heart</fullName>
                </value>
                <value>
                    <fullName>BD - Alternate Transplant - Kidney(In conj w/ SPK)</fullName>
                </value>
                <value>
                    <fullName>BD - Alternate Transplant - Liver</fullName>
                </value>
                <value>
                    <fullName>BD - Alternate Transplant - Lung(Single/Bilateral)</fullName>
                </value>
                <value>
                    <fullName>BD - Alternate Transplant - Pancreas(PAK or PTA)</fullName>
                </value>
                <value>
                    <fullName>BD - Bariatric Surgery for Band Procedures</fullName>
                </value>
                <value>
                    <fullName>BD - Bariatric Surgery for Staple Procedures</fullName>
                </value>
                <value>
                    <fullName>BD - Bariatric Surgic Center</fullName>
                </value>
                <value>
                    <fullName>BD - Breast Cancer</fullName>
                </value>
                <value>
                    <fullName>BDC+ Maternity Care Plus</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Acute Leukemia</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Bladder Cancer</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Bone Cancer</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Brain Tumors</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Breast</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Colon</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Esophageal Cancer</fullName>
                </value>
                <value>
                    <fullName>BD - Cancer Care - Gastric Cancer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Directory_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Physician&apos;s Ethnicity</description>
        <label>Ethnicity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <label>Hours of Operation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPA/PHO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <description>PPN-18880: Languages loaded from PPW</description>
        <label>Languages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MSTR_ENTITY_ID__c</fullName>
        <externalId>true</externalId>
        <label>Master Entity ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messenger_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Messenger Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <externalId>true</externalId>
        <label>NPI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old Person Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFIN__c</fullName>
        <externalId>true</externalId>
        <label>PFIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Specialty__c</fullName>
        <label>Primary Specialty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abortion Clinic</fullName>
                </value>
                <value>
                    <fullName>Acquired Brain Injury</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Addiction Medicine</fullName>
                </value>
                <value>
                    <fullName>Adolescent Medicine</fullName>
                </value>
                <value>
                    <fullName>Adult Care Home</fullName>
                </value>
                <value>
                    <fullName>Adult Day Care</fullName>
                </value>
                <value>
                    <fullName>Allergy/Immunology</fullName>
                </value>
                <value>
                    <fullName>Ambulance - Air</fullName>
                </value>
                <value>
                    <fullName>Ambulance - Ground</fullName>
                </value>
                <value>
                    <fullName>Ambulance Services</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Infusion Suite</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Center</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Center (ASC)</fullName>
                </value>
                <value>
                    <fullName>Anatomic &amp; Clinical Pathology</fullName>
                </value>
                <value>
                    <fullName>Anatomic Pathology</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Assistant</fullName>
                </value>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>ANP/CERT/CLNP</fullName>
                </value>
                <value>
                    <fullName>Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Asst Living Behavioral Disturbnce &amp; Mental Illness</fullName>
                </value>
                <value>
                    <fullName>Athletic Trainer</fullName>
                </value>
                <value>
                    <fullName>Audiology</fullName>
                </value>
                <value>
                    <fullName>Autism DX/TX Agency</fullName>
                </value>
                <value>
                    <fullName>Autism TX Agency</fullName>
                </value>
                <value>
                    <fullName>Bacteriology/Microbiology</fullName>
                </value>
                <value>
                    <fullName>Bariatrics</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Mixed Specialty</fullName>
                </value>
                <value>
                    <fullName>Birthing Center</fullName>
                </value>
                <value>
                    <fullName>Blood Banking &amp; Transfusion Medicine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Type__c</fullName>
        <label>Primary Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Acupuncture Grp</fullName>
                </value>
                <value>
                    <fullName>Acute Care Hospital</fullName>
                </value>
                <value>
                    <fullName>Adult Day Care</fullName>
                </value>
                <value>
                    <fullName>Adult Daycare Facility</fullName>
                </value>
                <value>
                    <fullName>Advanced Chiropractor</fullName>
                </value>
                <value>
                    <fullName>Advanced DOM</fullName>
                </value>
                <value>
                    <fullName>Advanced DOM Group</fullName>
                </value>
                <value>
                    <fullName>Air Ambulance</fullName>
                </value>
                <value>
                    <fullName>Ambulance Serv</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Infusion Suite</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Center</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Assistant Certified</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Assistant Grp</fullName>
                </value>
                <value>
                    <fullName>ANP/CERT/CLNP</fullName>
                </value>
                <value>
                    <fullName>ANP/CERT/CLNP Grp</fullName>
                </value>
                <value>
                    <fullName>Athletic Trainer</fullName>
                </value>
                <value>
                    <fullName>Audio Grp</fullName>
                </value>
                <value>
                    <fullName>Audiologist (Ind)</fullName>
                </value>
                <value>
                    <fullName>Audiologist (Individual)</fullName>
                </value>
                <value>
                    <fullName>Autism DX/TX Agency</fullName>
                </value>
                <value>
                    <fullName>Autism TX Agency</fullName>
                </value>
                <value>
                    <fullName>Bariatrics</fullName>
                </value>
                <value>
                    <fullName>BC Ambulance Serv</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Mixed Specialty</fullName>
                </value>
                <value>
                    <fullName>Birthing Center</fullName>
                </value>
                <value>
                    <fullName>Board Certified Assistant Behavior Analyst</fullName>
                </value>
                <value>
                    <fullName>Board Certified Behavior Analyst</fullName>
                </value>
                <value>
                    <fullName>Board Certified Behavior Analyst-Doctoral</fullName>
                </value>
                <value>
                    <fullName>BS Dental Grp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prov_ID__c</fullName>
        <externalId>true</externalId>
        <label>Prov ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider_Center_Record_Id__c</fullName>
        <displayFormat>R{000000}</displayFormat>
        <label>Provider Center Record Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Re_Credentialing_date__c</fullName>
        <label>Re-Credentialing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rolodex_Account_for__c</fullName>
        <description>PPN-20008</description>
        <label>Rolodex Account for</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <externalId>true</externalId>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Prov_ID__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CM_Corporate_Entity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Entity_Accounts_IL</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PFIN__c</columns>
        <columns>NPI__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>IL1</value>
        </filters>
        <label>All Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Illinois</role>
            <role>Illinois_PNC</role>
            <role>Illinois_Supervisor</role>
            <role>Provider_Data_Rep_IL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Entity_Accounts_MT</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PFIN__c</columns>
        <columns>NPI__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>MT1</value>
        </filters>
        <label>All Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Montana</role>
            <role>Montana_Supervisor</role>
            <role>Provider_Data_Rep_MT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Entity_Accounts_NM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PFIN__c</columns>
        <columns>NPI__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>NM1</value>
        </filters>
        <label>All Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_New_Mexico</role>
            <role>New_Mexico_PNC</role>
            <role>New_Mexico_Supervisor</role>
            <role>Provider_Data_Rep_NM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Entity_Accounts_OK</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PFIN__c</columns>
        <columns>NPI__c</columns>
        <columns>Tax_Id__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>OK1</value>
        </filters>
        <label>All Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Oklahoma</role>
            <role>Oklahoma_PNC</role>
            <role>Oklahoma_Supervisor</role>
            <role>Provider_Data_Rep_OK</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Entity_Accounts_TX</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PFIN__c</columns>
        <columns>NPI__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>TX1</value>
        </filters>
        <label>All Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Texas</role>
            <role>Provider_Data_Rep_TX</role>
            <role>Texas_PNC</role>
            <role>Texas_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Master_Entity_Accounts_IL</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>MSTR_ENTITY_ID__c</columns>
        <columns>Prov_ID__c</columns>
        <columns>Class__c</columns>
        <columns>CM_Corporate_Entity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Master_Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>IL1</value>
        </filters>
        <label>All Master Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Illinois</role>
            <role>Illinois_PNC</role>
            <role>Illinois_Supervisor</role>
            <role>Provider_Data_Rep_IL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Master_Entity_Accounts_MT</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>MSTR_ENTITY_ID__c</columns>
        <columns>Prov_ID__c</columns>
        <columns>Class__c</columns>
        <columns>CM_Corporate_Entity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Master_Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>MT1</value>
        </filters>
        <label>All Master Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Montana</role>
            <role>Montana_Supervisor</role>
            <role>Provider_Data_Rep_MT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Master_Entity_Accounts_NM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>MSTR_ENTITY_ID__c</columns>
        <columns>Prov_ID__c</columns>
        <columns>Class__c</columns>
        <columns>CM_Corporate_Entity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Master_Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>NM1</value>
        </filters>
        <label>All Master Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_New_Mexico</role>
            <role>New_Mexico_PNC</role>
            <role>New_Mexico_Supervisor</role>
            <role>Provider_Data_Rep_NM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Master_Entity_Accounts_OK</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>MSTR_ENTITY_ID__c</columns>
        <columns>Prov_ID__c</columns>
        <columns>Class__c</columns>
        <columns>CM_Corporate_Entity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Master_Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>OK1</value>
        </filters>
        <label>All Master Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Oklahoma</role>
            <role>Oklahoma_PNC</role>
            <role>Oklahoma_Supervisor</role>
            <role>Provider_Data_Rep_OK</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Master_Entity_Accounts_TX</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>MSTR_ENTITY_ID__c</columns>
        <columns>Prov_ID__c</columns>
        <columns>Class__c</columns>
        <columns>CM_Corporate_Entity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Master_Entity_Account</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>TX1</value>
        </filters>
        <label>All Master Entity Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Texas</role>
            <role>Provider_Data_Rep_TX</role>
            <role>Texas_PNC</role>
            <role>Texas_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Physician_Accounts_IL</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>NPI__c</columns>
        <columns>PFIN__c</columns>
        <columns>Prov_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Tax_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Physician</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>IL1</value>
        </filters>
        <label>All Physician Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Illinois</role>
            <role>Illinois_PNC</role>
            <role>Illinois_Supervisor</role>
            <role>Provider_Data_Rep_IL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Physician_Accounts_MT</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>Primary_Specialty__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>NPI__c</columns>
        <columns>PFIN__c</columns>
        <columns>Prov_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Tax_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Physician</value>
        </filters>
        <filters>
            <field>CM_Corporate_Entity_Code__c</field>
            <operation>equals</operation>
            <value>MT1</value>
        </filters>
        <label>All Physician Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CLM_Admin</role>
            <role>CLM_Montana</role>
            <role>Montana_Supervisor</role>
            <role>Provider_Data_Rep_MT</role>
        </sharedTo>
    </listViews>
</CustomObject>